# Template_Download_File_Large

./: .env  .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml  run_app.py
app/: main.py
app/core/: config.py  tools.py
app/core/abstractions/: singleton.py
app/core/celery/: celery_conn.py
app/core/database/: __init__.py  minio.py  mongo.py
app/core/schema/: api_respone.py
app/core/startup_event/: __init__.py  crontask.py
app/dramatiq_worker/: broker.py  clear_message_xq.py  worker.py
app/file_handler/models/: __init__.py  file_excel.py
app/file_handler/schema/: schema.py
app/file_handler/utils/: util.py
app/file_handler/view/: __init__.py  view_file.py
celery_worker/: celery_worker.py  worker.py
docker/: docker-compose.yml
file_handler/: models.py  serializers.py  urls.py  views.py
file_handler/migrations/: 0001_initial.py
scripts/: initialize_project.sh  run_app.sh  run_worker.sh
template_download_file/: asgi.py  settings.py  urls.py  wsgi.py
