[tool.poetry]
name = "template-download"
version = "0.1.0"
description = ""
authors = ["ng14th <thnguyen.github@gmail.com>"]
readme = "README.md"
packages = [{include = "template_download"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
umongo = "^3.1.0"
aioredis = "^2.0.1"
pydantic = "^1.10.7"
openpyxl = "^3.1.2"
python-multipart = "^0.0.6"
minio = "^7.1.14"
uvloop = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
