[tool.poetry]
name = "template-download"
version = "0.1.0"
description = ""
authors = ["ng14th <thnguyen.github@gmail.com>"]
readme = "README.md"
packages = [{include = "template_download"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
umongo = "^3.1.0"
aioredis = "^2.0.1"
pydantic = "^1.10.7"
openpyxl = "^3.1.2"
python-multipart = "^0.0.6"
minio = "^7.1.14"
uvloop = "^0.17.0"
motor = "^3.1.1"
httpx = "^0.23.3"
fastapi-utils = "^0.2.1"
dramatiq = "^1.14.2"
pika = "^1.3.1"
gevent = "^22.10.2"
dramatiq-abort = "^1.0.0"
kombu = "^5.2.4"
celery = "^5.2.7"
redis = "^4.5.4"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
