[tool.poetry]
name = "template-download-file-large"
version = "0.1.0"
description = ""
authors = ["nguyennt65"]
readme = "README.md"
packages = [{include = "template_download_file_large"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
